# DoAn

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  HUONG-DAN-CAI-DAT.txt  README.md  docker-compose.prod.yml  docker-compose.yml  test_out.txt  test_qr_fail.txt  test_result.txt  test_w5.txt  w5_result.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  seed_demo.py  test_output.txt  test_result.txt
backend/alembic/: env.py
backend/alembic/versions/: 08639450a3cc_m6_login_log_partner_staff_actor.py  104d1fc4fa79_qt1_must_change_password.py  162e25afc796_rename_tenant_to_partner.py  458af7bebbbe_create_users_table.py  6c1c7e9c631b_qt7_reward_free_voucher.py  6d84715a3902_qt3_earn_percent.py  784fe5e90d6a_qt2_partner_terms_license.py  7ab1e9299d05_qt8_audit_logs.py  a1b2c3d4e5f6_add_unique_email_phone.py  a2b3c4d5e6f7_voucher_validate_max_issuances_trigger.py  a3b4c5d6e7f8_create_tenant_authorizations.py  a4b5c6d7e8f9_create_campaign_service_fees.py  a5b6c7d8e9f0_alter_vouchers_add_issuance_snapshot_cancel.py  a6b7c8d9e0f1_create_campaign_fee_schedules.py  a7b8c9d0e1f2_alter_campaigns_service_fee_fields.py  a8b9c0d1e2f3_add_tenant_business_fields.py  a9b0c1d2e3f4_campaign_issuances_lazy_unique.py  b0c1d2e3f4a5_alter_transactions_add_legal_ratio.py  b1c2d3e4f5a6_create_campaign_templates.py  b2c3d4e5f6a7_add_updated_at.py  c9d8e7f6a5b4_add_redemption_amounts.py  (+26 more)
backend/app/: main.py
backend/scripts/: phase10_smoke.py  phase11_smoke.py  phase15_smoke.py  phase8_smoke.py  phase9_smoke.py
backend/tests/: conftest.py
(+431 files in other folders)
